--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     },
     "jsx": "preserve",
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "outDir": "./dist",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
